<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.accenture.leanarchri.timerecords</groupId>
	<artifactId>leab-arch-ref-implementation-timerecords</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>emp-timerecords-master</name>
	<description>Lean Arch Regerence implementation</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.4.2.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<!-- <dependency>  
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency> -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web-services</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		 <dependency>
	        <groupId>org.springframework.data</groupId>
	        <artifactId>spring-data-couchbase</artifactId>
	        <version>2.1.4.RELEASE</version>
    	</dependency>
    	 <dependency>
	        <groupId>com.couchbase.client</groupId>
	        <artifactId>java-client</artifactId>
	        <version>2.2.8</version>
	    </dependency>
    	 <dependency>
    	 	<groupId>org.springframework.boot</groupId>
    	 	<artifactId>spring-boot-devtools</artifactId>
    	 </dependency>
    	 
    	 <dependency>
   			 <groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
              
		<dependency>
			<groupId>org.springframework.cloud</groupId>
		 	 <artifactId>spring-cloud-starter-hystrix</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-eureka</artifactId>
		</dependency>
		
		<dependency>
    	 <groupId>org.springframework.cloud</groupId>
   		  <artifactId>spring-cloud-starter-feign</artifactId> 
		</dependency> 
		
			
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security.oauth</groupId>
			<artifactId>spring-security-oauth2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-jwt</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<scope>provided</scope> 
		</dependency>
		<dependency>
		    <groupId>net.logstash.logback</groupId>
		    <artifactId>logstash-logback-encoder</artifactId>
		    <version>4.8</version>
		</dependency>
		<dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-access</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
		   <groupId>io.springfox</groupId>
		   <artifactId>springfox-swagger2</artifactId>
		   <version>2.6.1</version>
		  </dependency>
		  
		  <dependency>
		   <groupId>com.fasterxml.jackson.core</groupId>
		   <artifactId>jackson-databind</artifactId>
		   <version>2.5.0</version>
		  </dependency>
		  <dependency>
		   <groupId>io.springfox</groupId>
		   <artifactId>springfox-swagger-ui</artifactId>
		   <version>2.6.1</version>
		  </dependency>
		  
		  <!-- JMETER DEPENDENCY -->
		  <!-- <dependency> 
	       <groupId>org.testng</groupId> 
	       <artifactId>testing</artifactId> 
	       <version>6.1.1</version> 
	     </dependency> 
	     <dependency> 
	       <groupId>org.wso2.carbon.automation</groupId> 
	       <artifactId>org.wso2.carbon.automation.extensions</artifactId> 
	       <version>4.3.0</version> 
	     </dependency> -->
		
	</dependencies>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>Camden.SR3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!--  <plugin> 
		         <artifactId>maven-surefire-plugin</artifactId> 
		         <version>2.12.3</version> 
		         <inherited>false</inherited> 
		         <configuration> 
		           <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine> 
		           <testFailureIgnore>true</testFailureIgnore> 
		           <disableXmlReport>false</disableXmlReport> 
		           <parallel>false</parallel> 
		           <includes> 
		             <include>**/*TestCase.java</include> 
		           </includes> 
		         </configuration> 
       </plugin>  -->
		</plugins>
	</build>


</project>